--- a/src/app/modules/anime/components/mt-recently-updated-list-entries/mt-recently-updated-list-entries.component.scss
+++ b/src/app/modules/anime/components/mt-recently-updated-list-entries/mt-recently-updated-list-entries.component.scss
@@ -5,6 +5,6 @@
   min-height: 594px;
 }
 
-::ng-deep .mat-select-value {
+::ng-deep mt-recently-updated-list-entries .mat-select-value {
   max-width: 128px !important;
 }
